--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -74,6 +74,18 @@
     dos-prompt&gt; <strong>mysql -u root</strong><br>
     ...<br>
     MariaDB [(none)]&gt; <strong>SHOW DATABASES;</strong><span style="font-weight: bold;"><br>
+  <pre>
+  +--------------------+
+  | Database           |
+  +--------------------+
+  | information_schema |
+  | mysql              |
+  | performance_schema |
+  | phpmyadmin         |
+  | test               |
+  +--------------------+
+  7 rows in set (0.001 sec)
+  </pre>
     </span>+---------------------+<br>
     | Database&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;
     &nbsp; &nbsp;&nbsp; |<br>
