--- a/SQL-1. SQL.html
+++ b/SQL-1. SQL.html
@@ -179,7 +179,7 @@
       <li>Numbers - <strong>DECIMAL </strong>(e.g. DECIMAL(5,2): -999.99 ~
         999.99 ), <strong>INT&nbsp;</strong></li>
       <li>Lists - <strong>ENUM, SET</strong></li>
-      <li><a href="https://dev.mysql.com/doc/refman/5.7/en/storage-requirements.html">https://dev.mysql.com/doc/refman/5.7/en/storage-requirements.html</a></li>
+      <li><a href="https://mariadb.com/kb/en/data-types-numeric-data-types/">https://mariadb.com/kb/en/data-types-numeric-data-types/</a></li>
     </ul>
     <p><strong>NULL</strong> 은 데이터베이스에 데이터 값이 없음을 나타 내기 위해 SQL에서 사용되는 특수 마커입니다. </p>
     <ul>
